src/index.css
/* fonts */
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap");

:root {
  --primary-dark: #0a1014;
  --primary-light: #f1faee;
  --primary-green: #2f9c95;
  --primary-red: #e63946;
}
*,
*:before,
*:after {
  box-sizing: border-box;
}

/* reset & common styles */
body,
ul,
h1,
h2,
h3,
p,
button,
a,
div {
  margin: 0;
  padding: 0;
  color: var(--primary-light);
  font-family: "Quicksand";
  letter-spacing: 2px;
  list-style-type: none;
  text-decoration: none;
}
body {
  background: var(--primary-red);

  overflow: hidden;
}
button {
  color: var(--primary-light);
  padding: 0.75rem 2rem;
  font-size: 1rem;
  background: transparent;
  border-radius: 1.5rem;
  border: 1px solid var(--primary-light);
  margin: 40px auto 0;
  cursor: pointer;
  opacity: 0.7;
}
.container {
  max-width: 60%;
  margin: 0 auto;
}
.container h3 {
  padding: 1rem;
  margin-bottom: 1rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  text-transform: uppercase;
}
.container li {
  padding: 0.5rem;
  cursor: pointer;
}

/* header */
header {
  display: flex;
  align-items: center;
  width: 75%;
  margin: 0 auto;
  padding-top: 1.5rem;
  /* border: 3px solid white; */
}
header .title {
  flex-grow: 1;
  margin-left: 20px;
  font-size: 0.6em;
}
header h1 {
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  padding-bottom: 10px;
  font-size: 1.6rem;
}
header .pizza-svg {
  width: 5rem;
  overflow: visible;
  stroke: var(--primary-light);
  stroke-width: 4;
  stroke-linejoin: round;
  stroke-linecap: round;
}
/*hero*/

.hero {
  min-width: 45%;
  height: 100%;
  padding: 4rem 2rem;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 0.75rem 0 0 0.75rem;
}
.hero p,
.hero h2 {
  width: 90%;
  height: 50%;
  text-align: center;
  font-size: 1.3rem;
  font-weight: 900;
  padding: 1rem 2rem;
  background-color: rgba(10, 16, 20, 0.541);
  border-radius: 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
/* lists */
li span.active {
  font-weight: bold;
}
li span.active::before {
  content: ">";
  position: relative;
  top: -2px;
  margin-right: 0.3rem;
  transform: scale(0.8, 1);
  display: inline-block;
}

/* pages */
.home {
  position: relative;
}
.home h2 {
  font-size: 3em;
  text-align: center;
  margin-bottom: 2rem;
  width: 70%;
  height: auto;
}
.home.container,
.order.container,
.ingredients.container,
.base.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-width: 60%;
  min-height: 50vh;
  box-shadow: 5px 5px 20px 0px rgba(34, 36, 33, 0.75);
  background-color: var(--primary-dark);
  border-radius: 0.75rem;
  margin: 0 auto;
  padding: 1rem 0;
}

.home.container {
  background: linear-gradient(
      90deg,
      rgba(10, 16, 20, 0.068) 0%,
      rgba(10, 16, 20, 0.253) 80%
    ),
    url(./img//hero-bkg.jpg);
  display: block;
  background-size: cover;
  background-position: right;
  height: 75vh;
  margin: 0 auto;
}
ul {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.home button {
  color: var(--primary-light);
  background-color: var(--primary-red);
  padding: 1rem 2rem;
  font-size: 1.6em;
  border: none;
  margin: 2rem 1.25rem;
  text-transform: uppercase;
  font-weight: 900;
}
.order p {
  margin: 20px auto;
}
.ingredients-content {
  max-width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  overflow-y: visible;
}
.ingredients select {
  /* width: 30%; */
  display: inline-block;
  margin: 0 auto;
  text-align: center;
}

@media screen and (max-width: 48rem) {
  .home.container,
  .order.container,
  .ingredients.container,
  .base.container {
  height: 80vh;
    margin: 0 auto;
    font-size: 1rem;
    justify-content: center;
    align-items: center;
    padding: 1.5rem;
  }
  .hero {
    max-width: 100%;
    background-color: rgba(10, 16, 20, 0.241);
    align-items: center;
    justify-content: space-evenly;
    padding: 0 1rem;
  }
  .container {
    max-width: 85%;
  }
  h3{
    font-size: 1rem;
  }
  .home h2 {
    font-size: 2rem;
    width: 90%;
  }
  .home button,
  .ingredients button {
    width: 100%;
    padding: 0.5rem 0.75rem;
    font-size: 1.2rem;
    margin: 0 auto;
    margin: 1rem 0;
  }
  .hero p {
    width: 100%;
    padding: 1rem  ;
    font-size: 1.2rem;
  }
}

/****** Modal *******/
.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.modal {
  max-width: 400px;
  margin: 0 auto;
  padding: 40px 20px;
  background: white;
  border-radius: 10px;
  text-align: center;
}
.modal button {
  color: #444;
  border-color: #444;
  font-weight: bold;
  margin-top: 20px;
}

.modal p {
  color: #444;
  font-weight: bold;
}

/* LOADER */

.loader {
  width: 1rem;
  height: 1rem;
  margin: 4rem auto;
  border-radius: 50%;
  background: #fff;
}
.loader-button {
  min-width: 10rem;
  /* background-color: #ffff; */
  color: #fff;
  font-weight: bold;
  text-align: center;
  position: absolute;
  top: 70%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* margin: 0 auto; */
}

